# livecoding

./: .gitmodules  CMakeLists.txt  Makefile  README.md  build.sh
src/: commands.cpp  instrument.cpp  instrument.h  main.cpp  music.cpp  music.h  shell.cpp  shell.h
